<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARcowabungaproject</string>
    <string name="action_settings">Settings</string>
    <string name="third_D_view">3D View!</string>
    <string name="pizza_icon">Pizza icon</string>
    <string name="show_more">show more &#9660;</string>
    <string name="menu">MENU</string>
    <string name="menu_actual_order">ACTUAL ORDER</string>
    <string name="menu_contact">CONTACT</string>
    <string name="menu_last_orders">LAST ORDERS</string>
    <string name="content_description_img">iconmenu</string>
    <string name="or_choose" >OR CHOOSE ONE OF THIS</string>
    <string name="create_your_own_pizza" >CREATE YOUR OWN PIZZA</string>
    <string name="create_your_own_pizza_desc" >To your taste with your favorite ingredients and your preferred mass!</string>
    <string name="tab_pizza">PIZZAS</string>
    <string name="tab_drinks">DRINKS</string>
    <string name="tab_offers">OFFERS</string>
    <string name="products">PRODUCTS</string>
    <string name="additional_ingredents">Additional ingredients:</string>
    <string name="cursor_down">&#9660;</string>
    <string name="cursor_up">&#9650;</string>
    <string name="redo_order">MAKE ORDER AGAIN</string>
    <string name="about_us">About Us: we are the fucking best awesome pizzeria in the fucking worl.. no, wait. The fucking universe!</string>
    <string name="your_order_is_coming">Your order is coming!</string>
    <string name="your_order_hour_aprox">Estimated time of arrival:</string>
    <string name="cancel">RETURN</string>
    <string name="send_order_accept">CONFIRM</string>
    <string name="select_ingredients">SELECT YOUR CHOICE!</string>
    <string name="save_your_pizza">SAVE</string>
    <string name="select_list_ingredients">First select your ingredients:</string>
    <string name="select_dough_pizza">Second: select your pizza dough and size:</string>
    <string name="makeyourpizza_nameofpizza">Name your pizza:</string>
    <string name="name_pizza_hint">Your pizza name here&#8230;</string>
    <!-- List Views -->
    
    <!-- Shopping cart layout -->
    <string name="remeber_advertice_title">REMEMBER!</string>
    <string name="remeber_advertice_message">FREE Shipping!</string>
    <string name="extra_ingredient_in_product_item">Extras</string>
    <string name="total_text">TOTAL</string>
    <string name="subtotal_text">SUBTOTAL</string>
    <string name="taxes_text">+ 10% TAX</string>
    <string name="shipping_cost_text">+ Shipping costs</string>
    <string name="shipping_cost_value">0,00€</string>
    <string name="shipping_begin_value">(0) 0,00€</string>
    <string name="shipping_leftbutton_moreitems">ADD MORE ITEMS</string>
    <string name="shipping_rightbutton_makeorder">MAKE ORDER</string>
    
    <!-- Image Content Descriptions -->
    <string name="chef_icon">Chef Icon</string>
    <string name="basket_icon">Basket Icon</string>
    
    <!-- End Layout Buttons -->
    
    <!-- Contact Activity -->
    <string name="contact_telephone">TELEPHONE: 93 666 666</string>
    <string name="contact_address">ADDRESS: C/ Gran calamar, 666, 2, 00069 Barcelona</string>
    <string name="contact_email">E-MAIL: jodertio@chicote.com</string>
    <string name="contact_wood_oven">WOOD OVEN</string>
    <string name="contact_quality_gourmet">QUALITY GOURMET</string>
    <string name="contact_italian_chef">ITALIAN CHEF</string>
    <string name="contact_satisfaction">SATISFACTION 100%</string>
    
    <!-- SEND ORDER INFO USER -->
    <string name="your_phone">Telephone</string>
    <string name="your_email">Email</string>
    <string name="your_postal_code">Postal Code</string>
    <string name="your_street">Street name</string>
    <string name="your_street_number">Street number</string>
    <string name="your_floor">Floor number</string>
    <string name="your_stair">Stair</string>
    <string name="your_door_number">Door number</string>
    <string name="send_order_info">LAST STEP</string>
    
    <!-- TYPE PYZZA DOUGH -->
    <string name="dough_thin">Thin</string>
    <string name="dough_normal">Normal</string>
    <string name="dough_thick">Thick</string>
    
     <!-- TYPE PYZZA SIZE -->
    <string name="size_small">Small</string>
    <string name="size_normal">Normal</string>
    <string name="size_big">Big</string>
    
</resources>

