<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/makeYourPizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="130dp"
        android:background="@color/background_red_order"
        android:orientation="vertical"
        android:padding="10dp"
        android:clickable="true"
        android:cacheColorHint="#00000000" >

        <TextView
            android:id="@+id/makeYourPizza_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/create_your_own_pizza"
            android:textSize="21sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/makeYourPizza_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/create_your_own_pizza_desc"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_ingredientsbar" />
    </LinearLayout>

    <TextView
        android:id="@+id/makeYourPizza_description_second"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/or_choose"
        android:textColor="@color/light_cyan"
        android:gravity="bottom"
        android:textSize="17sp"
        android:layout_marginLeft="15dp" />
    

</LinearLayout>
