<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_cyan" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="138dp"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/image_hour"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/content_description_img"
                android:src="@drawable/icon_clock" />

            <TextView
                android:id="@+id/your_order_text_is_coming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_hour"
                android:text="@string/your_order_is_coming"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/your_order_text_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/your_order_text_is_coming"
                android:layout_below="@+id/your_order_text_is_coming"
                android:layout_marginTop="5dp"
                android:text="@string/your_order_hour_aprox"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="260dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/content_description_img"
            android:src="@drawable/order_sended_header" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contact_linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@layout/bg_button_bottom_general"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/menu"
            android:src="@drawable/iconmenulist" />

        <TextView
            android:id="@+id/contact_text_menu_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/menu"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>